# commission-crowd-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CNAME  Commission Crowd Secrets.md  PRD.md  README.md  SKILL.md  TASK LIST.md  generate_application_packs.py  index.html  learnings.md  mypy.ini  pyproject.toml  vendor-partnership.html
CCA-Hermes/: APP FLOW.md  FRONTEND GUIDELINES.md  Job Description for Commission Crowd Automation.md  SRS.md  TARGET AUDIENCE.md  TECH STACK.md
config/: operator_sources.example.json  operator_sources.json  operator_sources_commissioncrowd.json
css/: styles.css
docs/: architecture.md  backend-structure.md  cca_browser_discovery_mvp_final_report.md  cca_browser_discovery_mvp_release_candidate.md  commissioncrowd-browser-discovery.md  first_pilot_runbook.md  holdco-architecture.md  holdco-repo-mapping.md  holdco-website-copy-plan.md  icon-only-navigation.md  implementation-plan.md  known-limitations.md  local_supervisor_model_routing.md  manual-application-workflow.md  mvp-operator-runbook.md  opportunity-lifecycle.md  product-description.md  security-guidelines.md  shared-tools.md  sprint_3_specifications.md  supervisor-overall-goal.md  task-list.md  workflow-rep-application-model.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
obsidian/: README.md  app-flow.md  backend-structure.md  cca_browser_discovery_mvp_final_report.md  cca_browser_discovery_mvp_release_candidate.md  commissioncrowd-browser-discovery.md  first_pilot_runbook.md  frontend-guidelines.md  holdco-architecture.md  holdco-repo-mapping.md  holdco-website-copy-plan.md  icon-only-navigation.md  implementation-plan.md  job-description.md  known-limitations.md  local_supervisor_model_routing.md  manual-application-workflow.md  mvp-operator-runbook.md  opportunity-lifecycle.md  prd.md  product-description.md  security-guidelines.md  shared-tools.md  srs.md  supervisor-overall-goal.md  target-audience.md  task-list.md  tech-stack.md  workflow-rep-application-model.md
reports/: README.md  cca_application_packs.json  cca_application_packs.md  cca_approval_requests.json  cca_crm_staging.json  cca_crm_staging.md  cca_detail_capture.json  cca_detail_capture.md  cca_net_new_candidates.json  cca_net_new_candidates.md  cca_opportunity_id_deduplication_v1.json  cca_opportunity_id_deduplication_v1.md  cca_qualified_candidates.json  cca_qualified_candidates.md  cca_sheet_sync.json  cca_sheet_sync.md  cca_shortlist.json  cca_shortlist.md  cca_submissions.json  cca_submissions.md  cca_web_research.md  (+1 more)
(+196 files in other folders)
