[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commission-crowd-agent"
version = "0.1.0"
description = "Headless AI-powered automation for B2B lead research, outreach, and pipeline management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.0",
  "google-auth>=2.0",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.11",
]

[project.scripts]
cca = "commission_crowd_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/commission_crowd_agent --cov-report=term-missing"
